# qemu9

./: conf-flags.txt  configure  deps.txt  meson.build
subprojects/: libvfio-user.wrap
subprojects/libblkio/: .editorconfig  .gitignore  .gitlab-ci.yml  .meson-subproject-wrap-hash.txt  Cargo.toml  Containerfile  LICENSE-MIT  README.rst  build.rs  build.sh  containerized-build.sh  kcov-wrapper.sh  meson.build  package-version.py  run-test-suites-in-vm.sh
subprojects/libblkio/blkio/: Cargo.toml
subprojects/libblkio/blkio/src/: lib.rs  properties.rs  wait.rs
subprojects/libblkio/blkio/src/drivers/: iouring.rs  mod.rs  virtio_blk.rs
subprojects/libblkio/blkio/src/drivers/nvme_io_uring/: ioctl.rs  mod.rs  nvme_ioctl.rs
subprojects/libblkio/docs/: blkio.rst  conf.py  index.rst  meson.build
subprojects/libblkio/examples/: blkio-bench.c  blkio-copy.c  blkio-info.c  meson.build
subprojects/libblkio/include/: blkio.h  meson.build
subprojects/libblkio/src/: cargo-build.sh  error-msg.c  lib.rs  meson.build
subprojects/libblkio/tests/: add-remove-queues.c  alloc-mem-region.c  auto-free-mem-regions.c  blkio-bench.sh  blkio-copy.sh  blkio-info.sh  block-limits.c  capacity.c  discard.c  driver-name.c  driver-not-found.c  error-msg.c  fd.c  flush.c  get-completion-fd.c  get-queue.c  growing_file.c  map-mem-region.c  meson.build  poll-queues.c  polled.c  props-blkio-info.sh  queue-full.c  read-invalid-flags.c  read-only.c  read-short.c  read.c  readv.c  set-completion-fd.c  started.c  timeout.c  user-data.c  util.c  util.h  write-fua.c  write-read.c  write-zeroes.c  write.c  writev-readv.c  writev.c
