[workspace]
# All crates residing in this repository are (transitive) "path" dependencies of
# the 'libblkio' crate, so they automatically become members of the workspace.

[package]
name = "libblkio"
version = "1.3.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = 'blkio'
doc = false

[features]
default = [
    "io_uring",
    "nvme-io_uring",
    "virtio-blk-vfio-pci",
    "virtio-blk-vhost-user",
    "virtio-blk-vhost-vdpa",
    ]
io_uring = ["blkio/io_uring"]
nvme-io_uring = ["blkio/nvme-io_uring"]
virtio-blk-vfio-pci = ["blkio/virtio-blk-vfio-pci"]
virtio-blk-vhost-user = ["blkio/virtio-blk-vhost-user"]
virtio-blk-vhost-vdpa = ["blkio/virtio-blk-vhost-vdpa"]

[dependencies]
blkio = { path = "./blkio", version = "0.4.0", default-features = false }
libc = "0.2"

[build-dependencies]
cc = "1.0"

# We set panic = "abort" to avoid unwinding into C, which would cause undefined
# behavior. (The 'test' and 'bench' profiles don't support panic = "abort".)

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
